# agents-repo-knowledge-base

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGNETS_addon.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  ENFORCEMENT.md  MISSION.md  SPECS.md
docs/context/: Harness engineering leveraging Codex in an agent-first world.md
docs/dev_plans/: 0001-cli-and-io.md  0002-index-gen.md  0003-pack-and-plan.md  0004-enforcement.md  0005-describe-and-list.md  0006-sessions.md  0007-self-adoption.md  INDEX.md
docs/proposals/: implementation_choices.md  plan_options_proposal_1.md  plan_options_proposal_2.md  proposals_evaluation.md  self_adoption.md
kb/atlas/modules/: kb.cli.toml  kb.enforcement.toml  kb.index.toml  kb.io.toml  kb.plan_pack.toml  kb.repo.toml  (+1 more)
kb/config/: obligations.toml  tags.toml
scripts/: ci-check.sh  hook-pre-commit.sh  kb-gate.sh
skills/: AGENTS.md  README.md
skills/agents-repo-knowledge-base-skill/: SKILL.md
src/: cli.rs  error.rs  lib.rs  main.rs  overlay.rs
src/config/: mod.rs  obligations.rs  tags.rs
src/index/: artifacts.rs  check.rs  deps.rs  git_inputs.rs  meta.rs  mod.rs  symbols.rs  tree.rs
src/io/: json.rs  jsonl.rs
src/policy/: lint.rs  mod.rs  obligations.rs
src/query/: describe.rs  list.rs  mod.rs  module_card.rs  pack.rs  plan.rs  read.rs  session.rs
src/repo/: diff.rs  diff_source.rs  git.rs  mod.rs  path.rs  prefix.rs  reader.rs  root.rs
tests/: dp0002_index.rs  dp0003_plan_pack.rs  dp0005_describe_list.rs  dp0005_facts.rs  dp0006_sessions.rs
tests/support/: mod.rs
(+16 files in other folders)
